# TimeRecorder

./: CMakeLists.txt  README.md  build.sh
TimeRecorder-Core/: CMakeLists.txt
TimeRecorder-Core/src/: tr_core.cpp  tr_core.h
TimeRecorder-Qt/: CMakeLists.txt  README.md
TimeRecorder-Qt/lib/: api.h
TimeRecorder-Qt/src/: main.cpp  main_window.cpp  main_window.h
TimeRecorder-electron/: main.js  package-lock.json  package.json
src/: main.cpp  tr_core.cpp  tr_core.h
